# Olive

./: .buildinfo  .coveragerc  .flake8  .gitattributes  .gitignore  .lintrunner.toml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  FormatPython.bat  MANIFEST.in  Makefile  Model_Analyzer_Support.md  NEWS.md  NOTICE.txt  README.md  SECURITY.md  ThirdPartyNotices.txt  conf.json  config.py  design.md  examples.html  genindex.html  hqq.json  index.html  lint.json  modelLab_eval.py  modelLab_evaluate.py  multi-component-model-architecture-design.md  objects.inv  onnx-pipeline.ipynb  onnxpipeline.py  privacy.html  prompts.json  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements-lintrunner.txt  requirements.txt  schema.json  (+7 more)
.azure_pipelines/: build-doc.yaml  formatting.yaml  olive-aml-ci.yaml  olive-ci-amd.yaml  olive-ci-openvino.yaml  olive-ci.yaml  olive-examples.yaml  olive-lllm-ci.yaml  olive-ort-last.yaml  olive-ort-nightly.yaml  olive-ortgenai-ci.yaml  package_publish.yaml  perfmonitoring-ci .yaml  perfmonitoring-ci.yaml  performance.yaml
.github/: copilot-instructions.md  pull_request_template.md
0.1.0/: examples.html  genindex.html  index.html  objects.inv  search.html
0.10.0/: .buildinfo  genindex.html  objects.inv  searchindex.js
0.10.1/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  why-olive.html
0.12.0/: .buildinfo  genindex.html  index.html  search.html  why-olive.html
0.12.1/: .buildinfo  genindex.html  index.html  search.html  searchindex.js  why-olive.html
0.13.0/: .buildinfo  genindex.html  index.html  objects.inv  privacy.html  search.html  searchindex.js  why-olive.html
0.2.0/: examples.html  genindex.html  index.html  objects.inv  search.html
0.2.1/: examples.html  genindex.html  index.html  objects.inv  search.html
0.3.1/: examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.3.2/: examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.3.3/: examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html
0.4.0/: .buildinfo  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.5.0/: genindex.html  index.html  objects.inv  search.html
0.5.1/: examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.5.2/: examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.6.0/: examples.html  genindex.html  index.html  objects.inv  py-modindex.html  (+2 more)
examples/bert/qdq/: google_bert_base_qdq.json  google_bert_large_qdq.json  google_bert_script.py  intel_bert_qdq.json  pyproject.toml  wikitext.py
mcp/: .gitignore  .mcp.json.example  README.md  pyproject.toml
mcp/config-mcp/: README.md  pyproject.toml
mcp/config-mcp/src/olive_config_mcp/: __init__.py  __main__.py  server.py
mcp/src/olive_mcp/: __init__.py  __main__.py  constants.py  jobs.py  packages.py  server.py  tools.py  venv.py  worker.py
olive/engine/packaging/sample_code/GenAIOnnxModel/cpp/: CMakeLists.txt  README.md  code_sample.cpp
(+5098 files in other folders)
