[project]
name = "olive-config-mcp"
version = "0.1.0"
description = "MCP server for Olive config file generation and validation"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "olive-ai",
]

[tool.uv.sources]
olive-ai = { path = "../..", editable = true }

[project.scripts]
olive-config-mcp = "olive_config_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/olive_config_mcp"]
