[dependency-groups]
dev = [
  "ipywidgets>=8.1.5",
  "jupyterlab>=4.3.6",
  "matplotlib>=3.10.1",
  "pytest>=8.3.5",
  "rich>=13.9.4",
  "ruff>=0.11.2"
]

[project]
name = "bert-qdq"
version = "0.1.0"
description = "Optimizing BERT with QDQ for NPU"
readme = "README.md"
requires-python = "==3.12.9"
dependencies = [
  "datasets>=3.4.1",
  "evaluate>=0.4.3",
  "nltk>=3.9.1",
  "numpy==1.26.4",
  "olive-ai",
  "onnx>=1.17.0",
  "onnxruntime-qnn>=1.21.0",
  "onnxscript>=0.2.5",
  "optimum>=1.24.0",
  "optuna>=4.2.1",
  "scikit-learn>=1.6.1",
  "tabulate>=0.9.0",
  "torch>=2.6.0",
  "torchmetrics>=1.7.0",
  "torchvision>=0.21.0",
  "tqdm>=4.67.1",
  "transformers>=4.50.0"
]

[tool.uv.sources]
olive-ai = {path = "../../../../Olive", editable = true}
